# Qtmotion

./: .gitignore  CMakeLists.txt  EventHandler.cpp  EventHandler.h  OptPageMain.cpp  OptPageMain.h  OptPageMainWidget.cpp  OptPageMainWidget.h  Plugin.cpp  Plugin.h  Qtmotion.cpp  Qtmotion.h  Qtmotion.json.in  README.md  Settings.cpp  Settings.h  TargetString.cpp  TargetString.h  qtmotion.cpp  qtmotion.h  qtmotion_global.h  qtmotionconstants.h  res.qrc
.github/workflows/: build_cmake.yml
